--- a/ii-assignment/pom.xml
+++ b/ii-assignment/pom.xml
@@ -83,16 +83,10 @@
 
 			<!-- Run the lenskit eval plugin that does the work of evaluating the 
 				recommenders you are comparing, by running your Groovy script. -->
-			<!-- <plugin>
-				<artifactId>lenskit-eval-maven-plugin</artifactId>
-				<groupId>org.grouplens.lenskit</groupId>
-				<version>${lenskit.version}</version>
-				<extensions>true</extensions>
-				<configuration>
-					Specify the evaluation script to run.
-					<script>${lenskit.eval.scriptDir}/eval.groovy</script>
-				</configuration>
-			</plugin> -->
+			<!-- <plugin> <artifactId>lenskit-eval-maven-plugin</artifactId> <groupId>org.grouplens.lenskit</groupId> 
+				<version>${lenskit.version}</version> <extensions>true</extensions> <configuration> 
+				Specify the evaluation script to run. <script>${lenskit.eval.scriptDir}/eval.groovy</script> 
+				</configuration> </plugin> -->
 
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -169,40 +163,6 @@
 							</arguments>
 						</configuration>
 					</execution>
-					<!-- <execution>
-						<id>run script</id>
-						<phase>package</phase>
-						<goals>
-							<goal>exec</goal>
-						</goals>
-						<configuration>
-							<executable>target/bin/run-ii</executable>
-							<arguments>
-								<argument>1024:77</argument>
-								<argument>1024:268</argument>
-								<argument>1024:462</argument>
-								<argument>1024:393</argument>
-								<argument>1024:36955</argument>
-								<argument>2048:77</argument>
-								<argument>2048:36955</argument>
-								<argument>2048:788</argument>
-							</arguments>
-						</configuration>
-					</execution> -->
-					<execution>
-						<id>run basket</id>
-						<phase>package</phase>
-						<goals>
-							<goal>exec</goal>
-						</goals>
-						<configuration>
-							<executable>target/bin/run-ii</executable>
-							<arguments>
-								<argument>--basket</argument>
-								<argument>77</argument>
-							</arguments>
-						</configuration>
-					</execution>
 				</executions>
 			</plugin>
 		</plugins>
@@ -211,56 +171,56 @@
 		<profile>
 			<id>user</id>
 			<build>
-			<plugins>
-			<plugin>
-				<artifactId>exec-maven-plugin</artifactId>
-				<groupId>org.codehaus.mojo</groupId>
-					<executions>
-					<execution>
-						<id>run basket</id>
-						<phase>package</phase>
-						<goals>
-							<goal>exec</goal>
-						</goals>
-						<configuration>
-							<executable>target/bin/run-ii</executable>
-							<arguments>
-								<argument>--basket</argument>
-								<argument>77</argument>
-							</arguments>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
+				<plugins>
+					<plugin>
+						<artifactId>exec-maven-plugin</artifactId>
+						<groupId>org.codehaus.mojo</groupId>
+						<executions>
+							<execution>
+								<id>run basket</id>
+								<phase>package</phase>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+								<configuration>
+									<executable>target/bin/run-ii</executable>
+									<arguments>
+										<argument>--basket</argument>
+										<argument>77</argument>
+									</arguments>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
 		</profile>
-				<profile>
+		<profile>
 			<id>item</id>
 			<build>
-			<plugins>
-			<plugin>
-				<artifactId>exec-maven-plugin</artifactId>
-				<groupId>org.codehaus.mojo</groupId>
-					<executions>
-				<execution>
-						<id>run basket</id>
-						<phase>package</phase>
-						<goals>
-							<goal>exec</goal>
-						</goals>
-						<configuration>
-							<executable>target/bin/run-ii</executable>
-							<arguments>
-								<argument>--basket</argument>
-								<argument>77</argument>
-							</arguments>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
+				<plugins>
+					<plugin>
+						<artifactId>exec-maven-plugin</artifactId>
+						<groupId>org.codehaus.mojo</groupId>
+						<executions>
+							<execution>
+								<id>run basket</id>
+								<phase>package</phase>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+								<configuration>
+									<executable>target/bin/run-ii</executable>
+									<arguments>
+										<argument>--basket</argument>
+										<argument>77</argument>
+									</arguments>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
 		</profile>
 	</profiles>
 </project>
